# multithreaded-web-crawler

./: Cargo.toml  README.md  main.rs
src/: crawler.rs  main.rs
