[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A concurrent web crawler written in Rust"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
url = "2.4"
dashmap = "5.5"
thiserror = "1.0"
futures = "0.3"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"